--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1: Separation of a Binary Mixture\n",
+    "\n",
+    "### Plot the Operating Lines and Equilibrium Curve for a Benzene/Toluene Mixture.\n",
+    "### The Reflux Ratio must be greater than a minimum value for a feasible separation.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Import Necessary Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -22,9 +41,22 @@
     "from IPython.display import display\n",
     "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
     "from IPython.display import clear_output\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### System Parameters using Raoult's Law"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Antoine Parameters for benzene\n",
     "Ben_A = 4.72583\n",
     "Ben_B = 1660.652\n",
@@ -36,13 +68,21 @@
     "Tol_C = -53.773\n",
     "\n",
     "P_sys = 1.0325\n",
+    "\n",
     "# Create Antoine equations for benzene and toluene\n",
     "benzene_antoine = AntoineEquationBase10(Ben_A, Ben_B, Ben_C)\n",
     "toluene_antoine = AntoineEquationBase10(Tol_A, Tol_B, Tol_C)\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n",
-    "\n",
+    "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
@@ -58,7 +98,6 @@
     "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
-    "\n",
     "\n",
     "def plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed.\n",
@@ -80,48 +119,57 @@
     "out_rect = Output()\n",
     "out_oplines = Output()\n",
     "\n",
-    "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
-    "def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
-    "    clear_output(wait=True)\n",
-    "    display(\"Calculating... Please wait.\")\n",
-    "    r_values = np.linspace(0.001, r_max, 100)\n",
-    "    x_fixed_r_arr = []\n",
-    "    x_fixed_s_arr = []\n",
+    "# # Define the sliders:\n",
+    "# xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "# xB2_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "# r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
-    "    for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "        distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
-    "        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
-    "        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
-    "        x_fixed_r_arr.append(x_fixed_r)\n",
-    "        x_fixed_s_arr.append(x_fixed_s)\n",
+    "# def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
+    "#     clear_output(wait=True)\n",
+    "#     display(\"Calculating... Please wait.\")\n",
+    "#     r_values = np.linspace(0.001, r_max, 100)\n",
+    "#     x_fixed_r_arr = []\n",
+    "#     x_fixed_s_arr = []\n",
     "\n",
-    "    # flatten the lists and repeat the r_values according to the number of x values\n",
-    "    r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\n",
-    "    r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\n",
-    "    x_fixed_r_arr = np.hstack(x_fixed_r_arr)\n",
-    "    x_fixed_s_arr = np.hstack(x_fixed_s_arr)\n",
+    "#     for r in tqdm(r_values, desc=\"Progress\"):\n",
+    "#         distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
+    "#         x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
+    "#         x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
+    "#         x_fixed_r_arr.append(x_fixed_r)\n",
+    "#         x_fixed_s_arr.append(x_fixed_s)\n",
     "\n",
-    "    plt.scatter(r_values_r, x_fixed_r_arr,marker = 'x')\n",
-    "    plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
-    "    plt.xlabel(\"Reflux Ratio\")\n",
-    "    plt.ylabel(\"x\")\n",
-    "    plt.show()\n",
+    "#   # flatten the lists and repeat the r_values according to the number of x values\n",
+    "#   r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\n",
+    "#   r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\n",
+    "#   x_fixed_r_arr = np.hstack(x_fixed_r_arr)\n",
+    "#   x_fixed_s_arr = np.hstack(x_fixed_s_arr)\n",
+    "\n",
+    "#   plt.scatter(r_values_r, x_fixed_r_arr,marker = 'x')\n",
+    "#   plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
+    "#   plt.xlabel(\"Reflux Ratio\")\n",
+    "#   plt.ylabel(\"x\")\n",
+    "#   plt.show()\n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 1: Stripping Line\n",
+    "##### An infinite number of stages are needed as the stripping line approaches the fixed point on the Equilibrium Curve."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e9fa25ab4e94a1f8d6b63296150cbf6",
+       "model_id": "09e04d6914134a02917529b67d4faadf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,20 +196,26 @@
     "go_button.on_click(on_go_button_click)\n",
     "\n",
     "layout = VBox([HBox(strip_plot.children[:-1]), go_button, out_strip])\n",
-    "display(layout)\n",
-    "\n",
-    "\n"
+    "display(layout)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 2: Rectifying Line\n",
+    "##### An infinite number of stages are needed as the rectifying line approaches the fixed point on the Equilibrium Curve."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42a172684bd042dd9201b55f30a49b02",
+       "model_id": "d9a40175658a42be817f1bdbe1857187",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,14 +246,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 3: Full Column\n",
+    "##### The graph on the right shows both operating lines.  The lines are green when the column parameters are feasible and red when unfeasible."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74fa5be64a65438eb56b3768e95fcb2b",
+       "model_id": "b44285997cc944a89d5310e6d2dbf92f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
