--- a/src/ex2_arclength_continuation.ipynb
+++ b/src/ex2_arclength_continuation.ipynb
@@ -542,6 +542,15 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in "
+   ]
   }
  ],
  "metadata": {
@@ -560,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
